<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.trivagomedia.app.user.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/promptLogin" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <EditText
            android:id="@+id/login_txtUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/back"
            android:backgroundTint="@android:color/white"
            android:hint="@string/hintUsername"
            android:padding="@dimen/_7sdp"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <EditText
            android:id="@+id/login_txtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/back"
            android:backgroundTint="@android:color/white"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:padding="@dimen/_7sdp"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/login_txtBtnForgot"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:padding="@dimen/_7sdp"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/actionForgotPassword"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:id="@+id/login_txtBtnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/back"
        android:gravity="center"
        android:padding="@dimen/_7sdp"
        android:text="@string/actionLogin"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:id="@+id/login_txtBtnSignup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:padding="@dimen/_7sdp"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/actionSignup"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp"
        android:visibility="visible" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/_3sdp">

            <LinearLayout
                android:id="@+id/login_btnFacebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_1sdp"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:backgroundTint="#3A579B">


                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_facebook_login" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:gravity="center"
                    android:text="@string/actionLogin"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_btnGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_1sdp"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:backgroundTint="#DC4E41">


                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_google_login" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:gravity="center"
                    android:text="@string/actionLogin"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15sdp" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>